# grimace-py

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
benchmarks/: README.md
compose/: checks.yml  docs.yml  package.yml  perf.yml  prepared-mol-zstd-dictionary.yml  prepared-mol-zstd-timings.yml  test-package.yml  test.yml  timings-enum.yml  timings-prepared-mol-zstd.yml
docs/: README.md  _config.yml  _config_local.yml  concepts.md  correctness-contracts.md  correctness.md  current-limitations.md  enum-s.md  getting-started.md  guides.md  index.md  prepared-mol-zstd-timings.tsv  rdkit-serializer-coverage.md  runtime.md  testing-fixtures.md  timings-enum.md  timings-enum.tsv  timings-prepared-mol-zstd-20260531_ebdfcd5d.tsv  timings-prepared-mol-zstd.md  timings-prepared-mol-zstd.tsv  timings.md  timings.tsv
notes/: 001_full_stereo_difficulty.txt  002_rdkit_miner_jsonl_resume.txt  003_perf_history.txt  004_perf_history.jsonl  005_test_suite_structure.txt  006_next_release_notes.txt  006_v0.1.8_release_notes.md  007_v0.1.9_release_notes.md  008_random_subset_enumeration.txt  008_stereo_constraint_model_plan.md  009_stereo_rdkit_parity_roadmap.md  009_v0.1.10_release_notes.md  010_prepared_mol_workflow.md  010_stereo_algorithm_target.md  010_v0.1.11_release_notes.md  011_public_api_and_prepared_internals.md  011_stereo_constraint_model_review.md  012_prepared_runtime_boundary.md  012_stereo_csp_fact_log_plan.md  013_rust_backed_prepared_mol_plan.md  013_rust_backed_prepared_mol_status.md  013_token_flip_replacement_alternatives.md  014_shared_marker_obligation_alternatives.md  014_strict_containerization_plan.md  015_assignment_first_support_loss.md  015_correctness_coverage_expansion.md  016_correctness_feature_labels.md  016_procedural_stereo_decision_inventory.md  017_dataset_mining_2026_05_25.md  017_stereo_promotion_sequence.md  018_rdkit_token_flip_adjustment_witnesses.md  018_skeptic_grade_correctness.md  019_retired_reference_artifacts.md  019_visible_marker_carrier_selection_audit.md  020_prepared_mol_zstd_dictionary.md  020_rdkit_writer_policy_separation_audit.md  021_rows_vs_native_propagator_checkpoint.md  021_timing_lane_cleanup.md  022_marker_basis_policy_boundary.md  022_rdkit_writer_support_counts.md  (+83 more)
requirements/: container-build-constraints.txt
scripts/: README.md  _path_policy.py  benchmark_south_star_enum_s.py  extract_rdkit_serializer_cases.py  generate_prepared_mol_zstd_dictionary.py  generate_rdkit_writer_support_counts.py  generate_reference_artifacts.py  mine_rdkit_regressions.py  mine_rdkit_writer_support_count_candidates.py  prepared_mol_zstd_dictionary_generate.py  prepared_mol_zstd_timings_measure.py  prepared_mol_zstd_timings_plot.py  rdkit_writer_support_count_surfaces.py  record_perf_hotspots.py  report_correctness_coverage.py  report_rdkit_serializer_coverage.py  timing_environment.py  timing_git_metadata.py  timing_history.py  timings_enum_measure.py  timings_prepared_mol_zstd_measure.py  timings_prepared_mol_zstd_plot.py  validate_release_artifacts.py  write_south_star_enum_s_case_manifest.py
tests/: README.md  prepared_mol_zstd_dictionary_flight.py  prepared_mol_zstd_dictionary_preflight.py  (+9 more)
(+618 files in other folders)
