[package]
name = "grimace-kernel"
version = "0.0.0"
description = "Rust core for the grimace Python package."
edition = "2021"
rust-version = "1.83"
homepage = "https://github.com/numpde/grimace-py"
repository = "https://github.com/numpde/grimace-py"
documentation = "https://github.com/numpde/grimace-py/tree/main/docs"

[features]
default = []
python-extension = ["pyo3/extension-module"]

[lib]
name = "_core"
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[dependencies]
pyo3 = { version = "0.28.2" }
