[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "grimace"
version = "0.0.0"
description = "Rust-first SMILES enumeration and next-token decoding with Python bindings."
readme = "README.md"
requires-python = ">=3.11"

[tool.maturin]
python-source = "python"
module-name = "grimace._core"
features = ["python-extension"]

[dependency-groups]
test = []
dev = []
