[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "grimace-py"
version = "0.1.9"
description = "Rust-first SMILES enumeration and next-token decoding with Python bindings."
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
requires-python = ">=3.11"
dependencies = ["rdkit>=2026.3"]
keywords = ["smiles", "chemistry", "rdkit", "enumeration", "decoding"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/numpde/grimace-py"
Source = "https://github.com/numpde/grimace-py"
Issues = "https://github.com/numpde/grimace-py/issues"

[tool.maturin]
python-source = "python"
module-name = "grimace._core"
features = ["python-extension"]

[dependency-groups]
test = []
dev = []
